Explicitly request libheif about the chroma of the RGB space

BUG:517241